27:37 min, jquery all good so far

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </header>
     <div id="animal-info"></div>
     <!--linking-->
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
     <script src="main.js"></script>
 </body>
